chore(demo): fix examples in dark mode
Closes taiga-family/maskito#643

--- a/projects/demo/src/styles.less
+++ b/projects/demo/src/styles.less
@@ -9,6 +9,14 @@ body {
     height: 100%;
 }
 
+html {
+    color-scheme: light;
+}
+
+[data-mode='onDark'] {
+    color-scheme: dark;
+}
+
 markdown {
     display: block;
 
